samples/_failures_safe/1761084561_28d6ea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8141a5ca.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_8141a5ca.c:164:9: error: expected declaration or statement at end of input
  164 |         case TOKEN_NUMBER:
      |         ^~~~
./samples/SAFE/__tmp_8141a5ca.c:164:9: error: expected declaration or statement at end of input
